--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@ layout: home
   <div class="hero-inner container">
 
     <img src="{{ site.author.thumb | prepend: site.baseurl }}" alt="author thumb" class="dot">
-    <h1>Hello!..</h1>
+    <h1>Howdy-do!..</h1>
     <h3>I'm <strong itemprop="name">{{ site.author.name }}</strong>, a <em itemprop="jobTitle">{{ site.author.job }}</em>.</h3>
     <h3>{{ site.author.bio }}</h3>
     <h3>I like to code with lots of coffe and a good metal music!
