--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,12 @@ layout: home
 
   <div class="hero-inner container">
 
+      <h3>STAY TUNED - June 16 I will be at UEPG talking about:</h3>
+      <h2>Software Automated Testing – Testing with Selenium, NodeJS and TheIntern!</h2>
+      <h3>You can have more info in <a href="http://www.techweek.net.br/">TechWeek</a> page.</h3>
+
     <img src="{{ site.author.thumb | prepend: site.baseurl }}" alt="author thumb" class="dot">
+
     <h1>Howdy-do!..</h1>
     <h3>I'm <strong itemprop="name">{{ site.author.name }}</strong>, a <em itemprop="jobTitle">{{ site.author.job }}</em>.</h3>
     <h3>{{ site.author.bio }}</h3>
