--- a/source/index.html
+++ b/source/index.html
@@ -6,9 +6,11 @@ layout: home
 
   <div class="hero-inner container">
 
-      <h3>STAY TUNED - June 16 I will be at UEPG talking about:</h3>
+    <div class="card">
+      <h3>STAY TUNED - It's today at 7pm!</h3>
       <h2>Software Automated Testing – Testing with Selenium, NodeJS and TheIntern!</h2>
       <h3>You can have more info in <a href="http://www.techweek.net.br/">TechWeek</a> page.</h3>
+    </div>
 
     <img src="{{ site.author.thumb | prepend: site.baseurl }}" alt="author thumb" class="dot">
 
@@ -18,9 +20,9 @@ layout: home
     <h3>I like to code with lots of coffe and a good metal music!
     <h3>{% include contact.html %}</h3>
 
-    <a href="{{ '/about' | prepend: site.baseurl }}" class="btn btn-ghost">about</a>
+    <a href="{{ '/about'  | prepend: site.baseurl }}" class="btn btn-ghost">about</a>
     <a href="{{ '/resume' | prepend: site.baseurl }}" class="btn btn-ghost">resume</a>
-    <a href="{{ '/blog' | prepend: site.baseurl }}" class="btn btn-ghost">blog</a>
+    <a href="{{ '/blog'   | prepend: site.baseurl }}" class="btn btn-ghost">blog</a>
 
   </div>
 
