Paraná Dev Day talk update

--- a/source/index.html
+++ b/source/index.html
@@ -7,9 +7,9 @@ layout: home
   <div class="hero-inner container">
 
     <div class="card">
-      <h3>STAY TUNED - It's today at 7pm!</h3>
+      <h3>STAY TUNED - June 25 at 11:10 I'll be with this talk</h3>
       <h2>Software Automated Testing – Testing with Selenium, NodeJS and TheIntern!</h2>
-      <h3>You can have more info in <a href="http://www.techweek.net.br/">TechWeek</a> page.</h3>
+      <h3>You can have more info in <a href="http://paranadevday.com.br/">Paraná Dev Day</a> page.</h3>
     </div>
 
     <img src="{{ site.author.thumb | prepend: site.baseurl }}" alt="author thumb" class="dot">
