adjust discount type

--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@ layout: home
       <h3>STAY TUNED - June 25 at 11:10 I'll be with this talk</h3>
       <h2>Software Automated Testing – Testing with Selenium, NodeJS and TheIntern!</h2>
       <h3>You can have more info in <a href="http://paranadevday.com.br/">Paraná Dev Day</a> page.</h3>
-      <h2>And you can get R$ 25 off <a href="https://www.eventbrite.com/e/bilhetes-parana-dev-day-25729085387?discount=DEVPARANA/">here</a></h2>
+      <h2>And you can get R$ 25 off <a href="https://www.eventbrite.com/e/bilhetes-parana-dev-day-25729085387?discount=PALESTRANTE">here</a></h2>
     </div>
 
     <img src="{{ site.author.thumb | prepend: site.baseurl }}" alt="author thumb" class="dot">
