--- a/source/index.html
+++ b/source/index.html
@@ -16,6 +16,7 @@ layout: home
 
     <a href="{{ '/about'  | prepend: site.baseurl }}" class="btn btn-ghost">about</a>
     <a href="{{ '/resume' | prepend: site.baseurl }}" class="btn btn-ghost">resume</a>
+    <a href="{{ '/courses'   | prepend: site.baseurl }}" class="btn btn-ghost">Courses</a>
     <a href="{{ '/blog'   | prepend: site.baseurl }}" class="btn btn-ghost">blog</a>
 
   </div>
