--- a/source/index.html
+++ b/source/index.html
@@ -12,8 +12,9 @@ layout: default
       <h3>I like to code with lots of coffe and a good metal music! yeah</h3>
       <a href="{{ '/about'  | prepend: site.baseurl }}" class="button button-ghost">about</a>
       <a href="{{ '/resume' | prepend: site.baseurl }}" class="button button-ghost">resume</a>
-      <a href="{{ '/courses'   | prepend: site.baseurl }}" class="button button-ghost">courses</a>
+      <a href="{{ '/blog'   | prepend: site.baseurl }}" class="button button-ghost">blog</a>
       <a href="{{ '/contact'   | prepend: site.baseurl }}" class="button button-ghost">contact</a>
+      <a href="{{ '/courses'   | prepend: site.baseurl }}" class="button button-ghost">courses</a>
 
       {% include social.html %}
     </div>
