--- a/source/index.html
+++ b/source/index.html
@@ -7,12 +7,13 @@ layout: default
     <div class="container">
 
       <img src="{{ site.author.thumb | prepend: site.baseurl }}" alt="author thumb" class="dot">
+      <h1>Hey there! 👋</h1>
 
-      <h1>Howdy-do!..</h1>
-
-      <h3>I'm <strong itemprop="name">{{ site.author.name }}</strong>, a <em itemprop="jobTitle">{{ site.author.job }}</em>.</h3>
+      <h3>I'm <strong itemprop="name">{{ site.author.full-name }}</strong>, a <em itemprop="jobTitle">{{ site.author.job
+          }}</em>.</h3>
       <h3>{{ site.author.bio }}</h3>
-      <h3>I like to code with lots of coffe and a good metal music! yeah</h3>
+      <h3>When I'm not architecting global systems or mentoring teams, you'll find me grilling with family, cheering for
+        Grêmio ⚪🔵⚫, or making sure I never run an UPDATE without WHERE again! ☕🎵</h3>
 
       <a href="{{ '/about'  | prepend: site.baseurl }}" class="button button-ghost">about</a>
       <a href="{{ '/resume' | prepend: site.baseurl }}" class="button button-ghost">resume</a>
