--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="hero-inner">
     <div class="container">
 
-      <img src="{{ site.author.thumb | prepend: site.baseurl }}" alt="author thumb" class="dot">
+      <img src="{{ site.author.thumb | prepend: site.baseurl }}" width="25%" height="25%" alt="author thumb" class="dot">
       <h1>Hey there! 👋</h1>
 
       <h3>I'm <strong itemprop="name">{{ site.author.full-name }}</strong>, a <em itemprop="jobTitle">{{ site.author.job
