add excerpt to missing pages

--- a/source/404.html
+++ b/source/404.html
@@ -3,4 +3,5 @@ layout: page
 title: "404 - Page not found"
 permalink: /404.html
 excerpt: "Sorry, the page you are looking for could not be found."
+description: ""
 ---
