--- a/source/icons.html
+++ b/source/icons.html
@@ -3,6 +3,7 @@ layout: page
 title: Icons fonts
 permalink: /icons/
 excerpt: "A collection of icon fonts used throughout the site."
+description: ""
 ---
 
 <style>
